--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "testing-poc",
   "version": "0.1.0",
+  "homepage": "https://issactoto.github.io/testing-poc",
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
@@ -15,9 +16,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll=false && cypress run --spec cypress/integration/init.spec.js ",
     "eject": "react-scripts eject",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +48,7 @@
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
     "babel-jest": "^27.4.6",
+    "gh-pages": "^3.2.3",
     "jest": "^27.4.7"
   }
 }
